--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -150,6 +150,7 @@ $default-float: left;
 //
 
 // $row-width: em-calc(1000);
+$column-gutter: emCalc(60px);
 // $column-gutter: em-calc(30);
 // $total-columns: 12;
 
@@ -176,6 +177,7 @@ $default-float: left;
 // $header-font-weight: bold;
 // $header-font-style: normal;
 // $header-font-color: #222;
+$header-font-color: #fff;
 // $header-line-height: 1.4;
 // $header-top-margin: .2em;
 // $header-bottom-margin: .5em;
@@ -1257,6 +1259,7 @@ $default-float: left;
 
 // $topbar-bg-color: #111;
 // $topbar-bg: $topbar-bg-color;
+$topbar-bg: #212D48 !default;
 
 // Height and margin
 
