--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,26 +23,6 @@
 
   <body>
 
-    <!--<nav class="top-bar">-->
-      <!--<ul class="title-area">-->
-        <!--<li class="name">-->
-          <!--<h1>Name</h1>-->
-        <!--</li>-->
-      <!--</ul>-->
-      <!--<section class="top-bar-section">-->
-        <!--<ul class="right">-->
-          <!--<li class="divider"></li>-->
-          <!--<li>name1</li>-->
-          <!--<li class="divider"></li>-->
-          <!--<li>name2</li>-->
-          <!--<li class="divider"></li>-->
-          <!--<li>name3</li>-->
-          <!--<li class="divider"></li>-->
-          <!--<li>name4</li>-->
-        <!--</ul>-->
-      <!--</div>-->
-    <!--</nav>-->
-
     <nav class="top-bar">
       <ul class="title-area">
         <!-- Title Area -->
@@ -64,6 +44,20 @@
         </ul>
       </section>
     </nav>
+
+    <div id="footer" class="pagination-centered">
+      <ul class="pagination">
+        <li class="arrow unavailable"><a href="">&laquo;</a></li>
+        <li class="current"><a href="">1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
+        <li><a href="">4</a></li>
+        <li class="unavailable"><a href="">&hellip;</a></li>
+        <li><a href="">12</a></li>
+        <li><a href="">13</a></li>
+        <li class="arrow"><a href="">&raquo;</a></li>
+      </ul>
+    </div>
 
     <%= javascript_include_tag "application" %>
   </body>
