--- a/app/assets/stylesheets/wish.css.scss
+++ b/app/assets/stylesheets/wish.css.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the wish controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "foundation_and_overrides";
+.button {
+  @include button();
+  background-color: #5da423;
+  border-color: #457a1a;
+  color: white;
+  font-size: 0.8125em;
+  -webkit-border-radius: 1000px;
+  border-radius: 1000px;
+  width: 20%;
+  margin: 2%;
+}
