--- a/app/views/contributions/new.html.erb
+++ b/app/views/contributions/new.html.erb
@@ -2,5 +2,6 @@
     <%= f.label :contributed_qty %>
     <%= f.text_field :contributed_qty, :size => 10 %>
     <%= f.hidden_field :wish_id, :value => params[:id] %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
     <%= f.submit class:'button' %>
 <% end %>
