--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,10 @@
   <div><%= f.label :name %><br/>
   <%= f.text_field :name %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.label :role %><br/>
+  <%= f.select :role, options_for_select(%w[CONTRIBUTOR RECEIVER]) %>
+
+    <div><%= f.submit "Sign up" %></div>
 <% end %>
 
 <%= render "devise/shared/links"%>
