--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,9 +19,9 @@
   <%= f.text_field :name %></div>
 
   <div><%= f.label :role %><br/>
-  <%= f.select :role, options_for_select(%w[CONTRIBUTOR RECEIVER]) %>
+  <%= f.select :role, options_for_select(%w[CONTRIBUTOR RECEIVER]) %></div>
 
-    <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up" %></div>
 <% end %>
 
 <%= render "devise/shared/links"%>
