<DD> Listed all wishes,on button click goes to the specific needy page

--- a/app/assets/stylesheets/wish.css.scss
+++ b/app/assets/stylesheets/wish.css.scss
@@ -6,7 +6,17 @@
   color: white;
   font-size: 0.8125em;
   -webkit-border-radius: 1000px;
-  border-radius: 1000px;
-  width: 20%;
+  border-radius: 10px;
+  width: 150px;
   margin: 2%;
+}
+
+
+tr, td {
+  font-size: 20px;
+  color: black;
+}
+
+table {
+  margin: auto;
 }
