--- a/app/views/wish/index.html.erb
+++ b/app/views/wish/index.html.erb
@@ -1,7 +1,17 @@
-<%= @wishes.each do |wish| %>
-    <h4><%=wish.id%></h4>
-    <h4><%=wish.due_date%></h4>
-    <h4><%=wish.wish_item%></h4>
-    <h4><%=wish.percent_fullfilled%></h4>
-<%end%>
+<table>
+  <th>ID</th>
+  <th>DUE_DATE</th>
+  <th>ITEM NEEDED</th>
+  <th>PERCENTAGE FULFILLED</th>
+  <% @wishes.each do |wish| %>
+      <tr>
+      <td><%= wish.id %></td>
+      <td><%= wish.due_date %></td>
+      <td><%= wish.wish_item %></td>
+      <td><%= wish.percent_fullfilled %></td>
+      <td><%= link_to 'SEE MORE DETAILS', show_wish_path(wish.id), method: 'get' , class: 'button' %></td>
+      </tr>
+  <% end %>
+</table>
+
 
