--- a/app/views/contributions/new.html.erb
+++ b/app/views/contributions/new.html.erb
@@ -1,6 +1,6 @@
- Email id: <input type="text" name="email" value=<%= current_user.email if current_user%>/>
 
 <%= form_for @contribution , :url => contributions_create_path do |f| %>
+    Your Email id: <input type="text" name="email" value=<%= current_user.email if ["CONTRIBUTOR","RECEIVER"].include?(current_user.role)%> >
     <%= f.label :contributed_qty %>
     <%= f.text_field :contributed_qty, :size => 10 %>
     <%= f.hidden_field :wish_id, :value => params[:id] %>
