--- a/app/views/wish/show.html.erb
+++ b/app/views/wish/show.html.erb
@@ -1,4 +1,3 @@
-
 <%= @wish.user.name %>
 <br/>
 <%= @wish.user.email %>
@@ -19,5 +18,9 @@
 <br/>
 <%= @wish.percent_fullfilled %>
 <br/>
-<%= link_to "Donate Anonymously", contributions_path, :method=>'get', :class => 'button' %>
-<%= button_to "Donate after SignIn", {:controller => 'devise/sessions', :action => 'new'}, {:class => 'button'} %>
+<% if current_user == nil%>
+    <%= button_to "Donate after SignIn", {:controller => 'devise/sessions', :action => 'new'}, {:class => 'button'} %>
+    <%= button_to "Donate Anonymously", contributions_path, :method=> 'get',:class => 'button' %>
+<% else %>
+    <%= link_to "Donate now", contributions_path, :method=>'get', :class => 'button' %>
+<% end %>
