--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.html {
+  width: 100%;
+  height: 100%;
+}
+
+.body {
+  height: inherit;
+}
+
+.top-bar-section {
+  height: inherit;
+}
