--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
             <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
         <% else %>
             <%= link_to "Sign up", new_user_registration_path %>
-            or <%= link_to "Sign in", new_user_session_path %>
+            <%= link_to "Sign in", new_user_session_path %>
         <% end %>
       </li>
     </ul>
