[Preethi/GS] create new wish for guest

--- a/app/views/wishes/new.html.erb
+++ b/app/views/wishes/new.html.erb
@@ -1,5 +1,4 @@
 <h2>Make a wish</h2>
-
 <%= form_for(@wish) do |f| %>
     <div><%= f.label :wish_for %>
       <br/>
@@ -7,7 +6,7 @@
 
     <div><%= f.label :due_date %>
       <br/>
-      <%= f.text_field :due_date ,placeholder: "yyyy-mm-dd"%></div>
+      <%= f.text_field :due_date, placeholder: "yyyy-mm-dd" %></div>
 
     </div>
 
@@ -15,19 +14,20 @@
       <br/>
       <%= f.text_field :quantity %></div>
 
+    <%= f.hidden_field :user_id, :value => current_user.id %>
 
     <div><%= f.label :help_type %>
       <br/>
-      <%= f.select :help_type_id, options_for_select(HelpType.all.collect {|h| [ h.name, h.id ] }) %>
+      <%= f.select :help_type_id, options_for_select(HelpType.all.collect { |h| [h.name, h.id] }) %>
 
       <div><%= f.label :purpose %>
         <br/>
-        <%= f.select :purpose_id, options_for_select(Purpose.all.collect {|p| [ p.name, p.id ] }) %></div>
+        <%= f.select :purpose_id, options_for_select(Purpose.all.collect { |p| [p.name, p.id] }) %></div>
 
       <h4 class='black'>Needy's Information</h4>
-      Name: <input type="text" name="name" >
-      Age: <input type="text" name="age" >
-      Country: <input type="text" name="country" >
+      Name: <input type="text" name="name">
+      Age: <input type="text" name="age">
+      Country: <input type="text" name="country">
 
-      <div><%= f.submit "Sign up" %></div>
+      <div><%= f.submit "Submit wish" %></div>
 <% end %>
