--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,17 +38,17 @@
       <li class="divider"></li>
       <li><%= link_to 'Home', root_path %></li>
       <li class="divider"></li>
-      <li><%= link_to 'About us' %></li>
+      <li><%= link_to 'Make A Wish', new_wish_path %></li>
       <li class="divider"></li>
-
-      <% if user_signed_in? %>
-          <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
-      <% else %>
-          <li><%= link_to "Sign up", new_user_registration_path %></li>
-          or
-          <li><%= link_to "Sign in", new_user_session_path %></li>
-      <% end %>
-
+      <li>
+        <% if user_signed_in? %>
+            <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+        <% else %>
+          <li><%= link_to "Sign up", new_user_registration_path %> </li>
+          <li class="divider"></li>
+          <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>
+      </li>
     </ul>
   </section>
 </nav>
