--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -8,7 +8,7 @@
       <td><%= wish.id %></td>
       <td><%= wish.due_date %></td>
       <td><%= wish.wish_item %></td>
-      <td><%= wish.percent_fullfilled %></td>
+      <td><div class="progress round success"> <span class="meter" style="width: 40%"></span><%= wish.percent_fullfilled %></div></td>
       <td><%= link_to 'SEE MORE DETAILS', wish, class: 'button' %></td>
       </tr>
   <% end %>
