[preethi/gs] styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <ul class="title-area">
     <!-- Title Area -->
     <li class="name">
-      <h1>
+      <h1 class="white">
         Welcome <%= current_user.name||"hey" if user_signed_in? %></h1>
     </li>
     <li class="toggle-topbar icon"><a href="#"><span>Menu</span></a></li>
