--- a/app/views/wishes/choose_user.html.erb
+++ b/app/views/wishes/choose_user.html.erb
@@ -1,3 +1,5 @@
+<div class="text-center">
 <h2>Make a wish</h2>
 <%= link_to "Sign in to continue", {:controller => 'devise/sessions', :action => 'new'}, {:class => 'button'} %>
 <%= link_to "Proceed as judge",{:controller => 'wishes', :action => 'proceed_as_judge'} ,:class => 'button' %>
+</div>
