--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -1,5 +1,6 @@
+<h2 class="text-center">Please make these wishes come true!!</h2>
 <table>
-  <th>ID</th>
+  <th>SL.NO</th>
   <th>DUE_DATE</th>
   <th>ITEM NEEDED</th>
   <th>PERCENTAGE FULFILLED</th>
