--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -177,7 +177,7 @@ $column-gutter: emCalc(60px);
 // $header-font-weight: bold;
 // $header-font-style: normal;
 // $header-font-color: #222;
-$header-font-color: #fff;
+//$header-font-color: #222;
 // $header-line-height: 1.4;
 // $header-top-margin: .2em;
 // $header-bottom-margin: .5em;
