[preethi] fixing defect

--- a/app/views/wishes/show.html.erb
+++ b/app/views/wishes/show.html.erb
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <th>USER NAME</th>
-    <td><%= @wish.user.id %></td>
+    <td><%= @wish.user.name %></td>
   </tr>
   <tr>
     <th>EMAIL</th>
