--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Sign up</h2>
-
+<div class='small-3 columns'>
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -23,5 +23,5 @@
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
-
 <%= render "devise/shared/links"%>
+</div>
