--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -3,12 +3,14 @@
   <th>SL.NO</th>
   <th>DUE_DATE</th>
   <th>ITEM NEEDED</th>
+  <th>QUANTITY</th>
   <th>PERCENTAGE FULFILLED</th>
   <% @wishes.each do |wish| %>
       <tr>
       <td><%= wish.id %></td>
       <td><%= wish.due_date %></td>
       <td><%= wish.wish_item %></td>
+      <td><%= wish.quantity %></td>
       <td><div class="progress round success"> <span class="meter" style="width: <%=wish.percent_fullfilled%>%"></span><%=wish.percent_fullfilled%></div></td>
       <td><%= link_to 'SEE MORE DETAILS', wish, class: 'button' %></td>
       </tr>
