--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 
   <%= stylesheet_link_tag "application" %>
   <%= javascript_include_tag "vendor/custom.modernizr" %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 
@@ -42,7 +43,7 @@
       <li class="divider"></li>
       <li>
         <% if user_signed_in? %>
-            <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+            <%= link_to "Sign out", destroy_user_session_path, :method => :get %>
         <% else %>
           <li><%= link_to "Sign up", new_user_registration_path %> </li>
           <li class="divider"></li>
